# linux2vhd

./: .gitignore  Makefile  README.md  pyproject.toml
.linux_vhd_launcher/: config.json
docs/: ARCHITECTURE.md  BCD_APPLICATION_TYPE_PROBE.md  BCD_BOOTAPP_ELEMENT_PROBE.md  BCD_LIVE_REGISTRATION.md  BCD_MUTATION_EXPERIMENT.md  BCD_STRATEGY_MATRIX.md  DEVELOPMENT.md  FEASIBILITY.md  FIRMWARE_EFI_STAGED.md  GRUB_LOOPBACK_UBUNTU.md  LIVE_ISO_PAYLOAD.md  LIVE_VHD_BOOT_FEASIBILITY.md  LIVE_VHD_DEMO.md  SAFETY.md  VALIDATION_REPORT_SCHEMA.md  VIRTDISK_BACKEND.md  VM_RUNNER.md  WINDOWS_VM_TEST_PROTOCOL.md
linux_vhd_launcher/: __init__.py  app.py  capabilities.py  cli.py  config.py  errors.py  logging_setup.py  models.py  smoke_support.py  validation.py  vm_runners.py
linux_vhd_launcher/data/: default_config.json
linux_vhd_launcher/demo/: __init__.py  live_vhd_demo.py
linux_vhd_launcher/gui/: main_window.py  wizard.py
linux_vhd_launcher/services/: bcd_probe.py  boot_manager.py  grub_config.py  installer_service.py  iso_manager.py  live_boot_registration.py  live_payload.py  operation_planners.py  secure_boot_helper.py  vhd_manager.py
linux_vhd_launcher/system/: __init__.py  runner.py  windows_bcd.py  windows_disk_image.py  windows_privileges.py  windows_safety.py  windows_vhd.py  windows_virtdisk_ctypes.py
linux_vhd_launcher/tests/: test_bcd_mutation_smoke.py  test_bcd_probe.py  test_boot_builder.py  test_boot_manager.py  test_capabilities.py  test_cli.py  test_config_registry.py  test_gui_import.py  test_installer_service.py  test_iso_manager.py  test_live_demo.py  test_runner.py  (+11 more)
scripts/: smoke_arch.sh  smoke_windows_demo.ps1
